--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ dataset/mlcourse-dota2-win-prediction.zip
 dataset/mlcourse-dota2-win-prediction/test_matches.jsonl
 dataset/mlcourse-dota2-win-prediction/train_matches.jsonl
 dataset/mlcourse-dota2-win-prediction/train_matches.jsonl.zip
+dataset/mlcourse-dota2-win-prediction
 code/__pycache__
