avg position and w-avg position added for each team

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ dataset/mlcourse-dota2-win-prediction/train_matches.jsonl
 dataset/mlcourse-dota2-win-prediction/train_matches.jsonl.zip
 dataset/mlcourse-dota2-win-prediction
 code/__pycache__
+code/testing.ipynb
